fix error in Pipfile

--- a/{{cookiecutter.repo_name}}/Pipfile
+++ b/{{cookiecutter.repo_name}}/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 python_version = "{{cookiecutter.python_version}}"
 
 [packages]
-{{cookiecutter.project_slug}} = {editable = true, path = "."}
+{{cookiecutter.repo_name}} = {editable = true, path = "."}
 
 [dev-packages]
 black = "*"
